--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --lightGray: hsl(212, 45%, 89%);
     --grayishBlue: hsl(220, 15%, 55%);
     --darkBlue: hsl(218, 44%, 22%);
-    --font: 'Roboto Mono', monospace;
+    --font: 'Roboto', sans-serif;
 }
 
 body {
@@ -11,28 +11,45 @@ body {
     padding: 0;
     font-family: var(--font);
     font-weight: 400;
+    font-size: 15px;
     background-color: var(--lightGray);
     text-align: center;
 }
 
 .main {
     background-color: var(--white);
-    width: 30%;
-    border-radius: 20%;
+    width: 20rem;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
     margin: auto;
     margin-top: 5rem;
 }
 
 .box {
-    padding: 2rem;
+    padding: 1rem;
+}
+
+.text_box {
+    padding: 1rem;
 }
 
 .title {
+    margin-top: 1rem;
+    color: var(--darkBlue);
     font-weight: 700;
+    font-size: 20px;
+}
+
+.content {
+    color: var(--grayishBlue);
+    margin-top: 1rem;
 }
 
 .image img {
-    border-radius: 20%;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
     max-width: 100%;
     height: auto;
 }
