--- a/style.css
+++ b/style.css
@@ -13,7 +13,11 @@ body {
     font-weight: 400;
     font-size: 15px;
     background-color: var(--lightGray);
+    display: flex;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
 .main {
@@ -23,7 +27,7 @@ body {
     -moz-border-radius: 20px;
     border-radius: 20px;
     margin: auto;
-    margin-top: 5rem;
+    box-shadow: 1px 2px 25px 10px hsla(212, 45%, 89%, 0.75);
 }
 
 .box {
