--- a/style.css
+++ b/style.css
@@ -50,10 +50,58 @@ body {
     margin-top: 1rem;
 }
 
-.image img {
+.qrcode-container {
+    display: flex;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
     max-width: 100%;
+    max-height: 100%;
+    padding: 1rem;
     height: auto;
+    align-items: center;
+    justify-content: center;
+    background-color: #0077ff;
+}
+
+.form {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.input {
+    width: 16rem;
+    padding: 0 1rem 0 1rem;
+    border: 1px solid var(--grayishBlue);
+    border-radius: 5px;
+    height: 2rem;
+    outline: none;
+    font-size: 15px;
+    font-family: var(--font);
+    font-weight: 400;
+}
+
+.button {
+    margin: 1rem 0 1rem 0;
+    width: 100%;
+    border: none;
+    border-radius: 5px;
+    height: 2rem;
+    outline: none;
+    font-size: 15px;
+    font-family: var(--font);
+    font-weight: 400;
+    background-color: var(--darkBlue);
+    color: var(--white);
+    cursor: pointer;
+}
+
+.attribution {
+    margin-bottom: 1rem;
+    color: var(--grayishBlue);
+    font-size: 11px;
+    font-weight: 400;
 }
