--- a/style.css
+++ b/style.css
@@ -105,3 +105,11 @@ body {
     font-size: 11px;
     font-weight: 400;
 }
+
+.hide {
+    display: none;
+}
+
+.no-padding {
+    padding: 1rem !important;
+}
